applications/services/radicle/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radicle-httpd
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: radicle
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: radicle-node
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: radicle
  ports:
    - name: p2p
      port: 8776
      targetPort: 8776
